# Senior-Design-Car

gpio-lib/: build-gpiolib.sh  jetsontx2-gpio-ctl.cpp  jetsontx2-gpio-ctl.h
lane-detection/: LaneDetector.cpp  LaneDetector.h  build-lane.sh  lane-detector  lane-detector.cpp
motor-ctl.c/: LongDataUARTProtocol.cpp  LongDataUARTProtocol.h  LongDataUARTProtocol.md  motor-ctl.c.ino
remote-ctl/: .gitignore  ArduinoPWM.cpp  ArduinoPWM.h  CMakeLists.txt  PWM.cpp  PWM.h  README.md  RemoteCtlApp.cpp  RemoteCtlApp.h  RoverApp.cpp  RoverApp.h  base-station  base-station.cpp  build-base-station.sh  build-rover.sh  doc.cfg  rover.cpp
remote-ctl/inc/: RoverApp.h
remote-ctl/rtf/: refman.rtf
remote-ctl/src/: ArduinoPWM.cpp  RoverApp.cpp
remote-ctl/src/base-ctl/include/: ArduinoPWM.h  RoverApp.h
remote-ctl/src/base-ctl/src/: ArduinoPWM.cpp  RemoteCtlApp.cpp  RoverApp.cpp  rover.cpp
remote-ctl/src/lane_detection/include/: LaneDetector.h
remote-ctl/src/lane_detection/src/: LaneDetector.cpp
